# ai-bootcamp

./: .gitignore
ai-lang-gragh/: logging.txt  main.py  pyproject.toml
ai-lang-gragh/agent/: 01_simple_bot.py  02_chat_bot.py  03_react_agent.py  04_drafter.py  05_rag.py
ai-lang-gragh/graph/: 01_hello_world_agent.py  02_multiple_inputs.py  03_sequential_graph.py  04_conditional_graph.py  05_lopping_graph.py
ai-lang-gragh/vector_db/: chroma.sqlite3
ai-learn/: .gitignore  main.py  pyproject.toml
ai-learn/base_api/: chat_api.py  generate_api.py
ai-learn/embedding/: intent_identify.py  test.py  tools.py
ai-learn/function_calling/: __init__.py  chat.py
ai-learn/prompt_cache/: chat.py
ai-learn/tools/: console.py  search.py
ai-learn/web_search/: __init__.py  chat.py  prompts.py
mcp-adk/: agents.py  client.py  main.py  pyproject.toml  server.py
mcp-adk/adk_agent/: agent.py
mcp-adk/test_agent/: agent.py
mcp-adk/tools/: file.py  weather.py
mcp-client/: client.py  mysql_server.py  pyproject.toml  python_server.py  students_scores.csv  weather_server.py
mcp-client/db/: school.sql
mcp-graphrag/: README.md  client.py  pyproject.toml  rag_server.py
mcp-graphrag/graphrag/: settings.yaml
mcp-graphrag/graphrag/input/: ID3、C4.5决策树的建模流程.txt  机器学习决策树算法详解.txt
mcp-graphrag/graphrag/logs/: logs.json
mcp-graphrag/graphrag/output/: communities.parquet  stats.json  (+5 more)
mcp-server/: main.py  pyproject.toml  report.md  server.py
mcp-server/services/: __init__.py  planner.py  writer.py
mcp-weather/: client.py  pyproject.toml  server.py  servers_config.json
(+116 files in other folders)
