[project]
name = "ai-lang-gragh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.9",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
]
