[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
]
